--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://34.234.95.8:9000/</sonar.host.url>
-                <sonar.login>cad04ee79005a161ec44740d3ab76f4bd866eb84</sonar.login>
+		<sonar.host.url>http://http://54.208.203.113:9000/</sonar.host.url>
+                <sonar.login>b3a77de7319db4e705539a31cf0d33dd54e30f94</sonar.login>
 		
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
