--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://34.229.70.26:9000/</sonar.host.url>
+		<sonar.host.url>http://54.172.124.183:9000/</sonar.host.url>
                 <sonar.login>sqp_8b2dc62927dc8b4a9b2986ce17b83cfd05057b15</sonar.login>
 		
              
@@ -99,13 +99,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://52.206.75.147:8081/repository/malwart-release/</url>
+	      <url>http:http://100.25.0.66:8081/repository/malwart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://52.206.75.147:8081/repository/walmart-snapshot/</url>
+	      <url>http:http://100.25.0.66:8081/repository/walmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
